<?xml version="1.0"?>
<package>
  <name>recharge_behaviour</name>
  <version>0.0.0</version>
  <description>The recharge_behaviour package</description>

  <maintainer email="autolab@todo.todo">autolab</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/recharge_behaviour</url> -->
  
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
